<resources>
    <string name="app_name">ShoppingCart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Menu_textHomepage">首頁</string>
    <string name="Menu_textMember">會員</string>
    <string name="Login_textAccount">帳號</string>
    <string name="Login_textPassword">密碼</string>
    <string name="Login_textShoppingCart">智慧商場</string>
    <string name="Login_textLogin">登入</string>
    <string name="Login_textSignUp">註冊</string>
    <string name="Login_textPhotoLogin">人臉辨識登入</string>
    <string name="Register_textNext">下一步</string>
    <string name="Register_textCancel">取消</string>
    <string name="Register_textMemberRegister">會員註冊</string>
    <string name="Register_textFaceRecognition">人臉辨識註冊</string>
    <string name="Register_textNickname">使用者名稱</string>
    <string name="TakePhoto_textFaceRecognition">人臉辨識註冊</string>
    <string name="TakePhoto_textTakePhoto">照張相</string>
    <string name="TakePhoto_textText">使用人臉辨識，可以在下次登入時不需輸入帳號密碼即可登入。</string>
    <string name="TakePhoto_textDescription">1.   如有穿戴眼鏡，請先拿下。 2.   拍照時請保持正臉。</string>
    <string name="TakePhoto_textComplete">完成註冊</string>
    <string name="TakePhoto_textSkipComplete">跳過，完成註冊</string>
    <string name="Menu_textShoppingCart">購物車</string>
    <string name="Products_textProducts">購物車內商品</string>
    <string name="Homepage_textCategory">商品分類</string>
    <string name="ShoppingCart_textPrice">價格：</string>
    <string name="ShoppingCart_textCount">數量：</string>
    <string name="Homepage_textFoodRecommend">食品推薦</string>
    <string name="Homepage_textDrinkRecommend">飲料推薦</string>
    <string name="Homepage_textDailyNecessitiesRecommend">生活用品推薦</string>
    <string name="tvUserName">使用者名稱：</string>
    <string name="tvNameAccuracy">準確率：</string>
</resources>