<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".member.Camera">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbProducts"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/Login_textPhotoLogin"></androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btTakePhotoTakePhoto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="12dp"
                android:text="@string/TakePhoto_textTakePhoto"
                app:layout_constraintBottom_toTopOf="@+id/ivPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="6dp"
                android:text="@string/tvUserName"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />

            <TextView
                android:id="@+id/tvLabelName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/tvUserName"
                app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />

            <TextView
                android:id="@+id/tvUserAccuracy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/tvNameAccuracy"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

            <TextView
                android:id="@+id/tvLabelAccuracy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/tvUserAccuracy"
                app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="750dp"
                android:layout_height="750dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@+id/btTakePhotoTakePhoto"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/btTakePhotoTakePhoto"
                app:layout_constraintTop_toBottomOf="@+id/btTakePhotoTakePhoto"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btTakePhotoComplete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/TakePhoto_textComplete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>