<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbHomepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"


        android:layout_height="649dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            tools:context=".homepage.Homepage">

            <TextView
                android:id="@+id/tvHomepageCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/Homepage_textCategory"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHomepageCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/tvHomepageCategory"
                app:layout_constraintTop_toBottomOf="@+id/tvHomepageCategory">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tvHomepageFoodRecommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/Homepage_textFoodRecommend"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvHomepageCategory" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHomepageFoodRecommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/tvHomepageFoodRecommend"
                app:layout_constraintTop_toBottomOf="@+id/tvHomepageFoodRecommend">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tvHomepageDrinkRecommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/Homepage_textDrinkRecommend"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvHomepageFoodRecommend" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHomepageDrinkRecommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/tvHomepageDrinkRecommend"
                app:layout_constraintTop_toBottomOf="@+id/tvHomepageDrinkRecommend" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>